--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -14,3 +14,4 @@ com.example.springproject.exception.base.UserNotFoundException= User Not Found E
 com.example.springproject.exception.InvalidDateOfBirthException= Age must be greater than 18
 com.example.springproject.controller.findById= Get user success!
 com.example.springproject.exception.base.DateInvalid=User's age must be over 18
+com.example.springproject.controller.transaction= Transaction Success
