--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -6,3 +6,4 @@ com.example.springproject.controller.create=Th\u00EAm m\u1EDBi th\u00E0nh c\u00F
 com.example.springproject.controller.delete= \u0058\u00f3\u0061\u0020\u006e\u0067\u01b0\u1edd\u0069\u0020\u0064\u00f9\u006e\u0067\u0020\u0074\u0068\u00e0\u006e\u0068\u0020\u0063\u00f4\u006e\u0067
 com.example.springproject.exception.base.UserNotFoundException= Ng\u01B0\u1EDDi d\u00F9ng kh\u00F4ng t\u1ED3n t\u1EA1i
 com.example.springproject.exception.InvalidDateOfBirthException= Tu\u1ED5i nh\u1ECF h\u01A1n 18
+com.example.springproject.controller.transaction= Giao d\u1ECBch th\u00E0nh c\u00F4ng
