--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -15,3 +15,5 @@ com.example.springproject.exception.InvalidDateOfBirthException= Age must be gre
 com.example.springproject.controller.findById= Get user success!
 com.example.springproject.exception.base.DateInvalid=User's age must be over 18
 com.example.springproject.controller.transaction= Transaction Success
+com.example.springproject.exception.ErrorEncrytException= Error Encryt
+om.example.springproject.exception.ErrorDecrytException= Error Decryt
