--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -7,3 +7,4 @@ com.example.springproject.controller.delete= \u0058\u00f3\u0061\u0020\u006e\u006
 com.example.springproject.exception.base.UserNotFoundException= Ng\u01B0\u1EDDi d\u00F9ng kh\u00F4ng t\u1ED3n t\u1EA1i
 com.example.springproject.exception.InvalidDateOfBirthException= Tu\u1ED5i nh\u1ECF h\u01A1n 18
 com.example.springproject.controller.transaction= Giao d\u1ECBch th\u00E0nh c\u00F4ng
+com.example.springproject.exception.ErrorEncrytException= c\u00F3 l\u1ED7i khi m\u00E3 h\u00F3a
